// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTemplateSync should render when loaded 1`] = `
<LoadingState
  additionalClasses=""
  loading={false}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <PageLayout
    header="Import or Export Templates"
    searchable={false}
  >
    <Connect(ReduxForm)
      history={Object {}}
      userPermissions={
        Object {
          "export": true,
          "import": true,
        }
      }
      validationData={Object {}}
    />
  </PageLayout>
</LoadingState>
`;

exports[`NewTemplateSync should render when loading 1`] = `
<LoadingState
  additionalClasses=""
  loading={true}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <PageLayout
    header="Import or Export Templates"
    searchable={false}
  >
    <Connect(ReduxForm)
      history={Object {}}
      userPermissions={
        Object {
          "export": true,
          "import": true,
        }
      }
      validationData={Object {}}
    />
  </PageLayout>
</LoadingState>
`;
